--- a/pre_struct/kv_ner_config.json
+++ b/pre_struct/kv_ner_config.json
@@ -13,9 +13,10 @@
   "label_all_tokens": true,
 
   "train": {
-    "data_path": "/data/ocean/FT_workspace/ner-finetune/data/huizhenbingli1119.json",
-    "val_data_path": "/data/ocean/FT_workspace/ner-finetune/data/menzhenbingli1119.json",
-    "test_split_ratio": 0.5,
+    "data_path": "/data/ocean/FT_workspace/ner-finetune/data/kv_ner_prepared/train.json",
+    "val_data_path": "/data/ocean/FT_workspace/ner-finetune/data/kv_ner_prepared/val.json",
+    "test_data_path": "/data/ocean/FT_workspace/ner-finetune/data/kv_ner_prepared/test.json",
+    "test_split_ratio": 0.0,
     "output_dir": "/data/ocean/FT_workspace/ner-finetune/kv_ner_output",
     "train_batch_size": 16,
     "eval_batch_size": 16,
